--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#000000" />
-  <title>VitalMove - Detalle</title>
+  <title>VitalMove Demo</title>
 </head>
-<body style="margin:0;">
-  <noscript>Debes activar JavaScript para ver esta app.</noscript>
+<body>
   <div id="root"></div>
 </body>
 </html>
